<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/login_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="30dp"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:gravity="center" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/hintTextColor" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/hintTextColor" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/login"
        android:padding="14dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/buttonTextColor" />
</LinearLayout>
